--- a/Volte/LoginViewController.xib
+++ b/Volte/LoginViewController.xib
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11535.1" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11523"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,52 +16,63 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="NGR-v0-bc9">
-                    <rect key="frame" x="20" y="89" width="335" height="489"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="rrY-ts-lAG">
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volte-logo-2" translatesAutoresizingMaskIntoConstraints="NO" id="9Uo-fT-S70">
-                            <rect key="frame" x="0.0" y="0.0" width="335" height="333"/>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CFD-at-71d">
-                            <rect key="frame" x="0.0" y="338" width="335" height="20.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="you@socialnetwork.org" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3qY-ok-6vV">
-                            <rect key="frame" x="0.0" y="363.5" width="335" height="30"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioR-lI-VRb">
-                            <rect key="frame" x="0.0" y="398.5" width="335" height="20.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ia7-0w-WrS">
-                            <rect key="frame" x="0.0" y="424" width="335" height="30"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                        </textField>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="egd-lh-pnd">
-                            <rect key="frame" x="0.0" y="459" width="335" height="30"/>
-                            <state key="normal" title="Let me in!"/>
-                        </button>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="NGR-v0-bc9">
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volte-logo-2" translatesAutoresizingMaskIntoConstraints="NO" id="9Uo-fT-S70"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CFD-at-71d">
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="you@socialnetwork.org" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3qY-ok-6vV">
+                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="iN0-l3-epB" id="tnU-8y-9Yl"/>
+                                    </connections>
+                                </textField>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioR-lI-VRb">
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ia7-0w-WrS">
+                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits" returnKeyType="send" secureTextEntry="YES"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="iN0-l3-epB" id="dl5-2h-ffI"/>
+                                    </connections>
+                                </textField>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="egd-lh-pnd">
+                                    <state key="normal" title="Let me in!"/>
+                                </button>
+                            </subviews>
+                        </stackView>
                     </subviews>
-                </stackView>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="NGR-v0-bc9" secondAttribute="trailing" id="1hT-gd-P7x"/>
+                        <constraint firstItem="NGR-v0-bc9" firstAttribute="top" secondItem="rrY-ts-lAG" secondAttribute="top" id="AAK-ch-wSM"/>
+                        <constraint firstAttribute="bottom" secondItem="NGR-v0-bc9" secondAttribute="bottom" id="CZh-i5-HPe"/>
+                        <constraint firstItem="NGR-v0-bc9" firstAttribute="leading" secondItem="rrY-ts-lAG" secondAttribute="leading" constant="20" id="VBA-k8-vHd"/>
+                        <constraint firstItem="NGR-v0-bc9" firstAttribute="width" secondItem="rrY-ts-lAG" secondAttribute="width" constant="-40" id="h5M-tH-XKc"/>
+                    </constraints>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="NGR-v0-bc9" secondAttribute="trailing" constant="20" id="0xw-Uz-itF"/>
-                <constraint firstItem="NGR-v0-bc9" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="691-xy-qVK"/>
-                <constraint firstItem="NGR-v0-bc9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="WDw-ZD-Voz"/>
+                <constraint firstAttribute="bottom" secondItem="rrY-ts-lAG" secondAttribute="bottom" id="1ue-zW-8A4"/>
+                <constraint firstAttribute="trailing" secondItem="rrY-ts-lAG" secondAttribute="trailing" id="2jA-33-IDD"/>
+                <constraint firstItem="rrY-ts-lAG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="DEd-1e-Zzp"/>
+                <constraint firstItem="rrY-ts-lAG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="vCL-X9-IZ5"/>
             </constraints>
             <connections>
                 <outlet property="loginButton" destination="egd-lh-pnd" id="M5n-DA-GOM"/>
                 <outlet property="passwordField" destination="ia7-0w-WrS" id="8Nc-Rp-2yZ"/>
+                <outlet property="scrollView" destination="rrY-ts-lAG" id="yOk-BA-fok"/>
                 <outlet property="usernameField" destination="3qY-ok-6vV" id="fdc-gf-B5W"/>
             </connections>
         </view>
